force-app/main/default/objects/Enrollment_Component_Criteria__c/validationRules/ECC_Process_Has_Parent_Component.validationRule-meta.xml
<ValidationRule>
    <fullName>ECC_Process_Has_Parent_Component</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Criteria_Type__c , &quot;Process&quot;),  ISBLANK( Enrollment_Component__c ))</errorConditionFormula>
    <errorMessage>Field Enrollment component can&apos;t be blank when type is Process.</errorMessage>
</ValidationRule>