force-app/main/default/objects/Enrollment_Component_Criteria__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Student_or_Household__c</columns>
    <columns>Enrollment_Component__c</columns>
    <columns>Criteria__c</columns>
    <columns>External_Id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Criteria__c</field>
        <operation>contains</operation>
        <value>Initial Enrollment</value>
    </filters>
    <label>All</label>
</ListView>